# chat_with_data

./: LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
configs/: semantic_layer.yaml
src/reliability_analyst/: __init__.py
src/reliability_analyst/agent/: __init__.py  planner.py
src/reliability_analyst/analytics/: __init__.py  tools.py
src/reliability_analyst/app/: __init__.py  cli.py
src/reliability_analyst/data/: loader.py
src/reliability_analyst/plotting/: __init__.py
src/reliability_analyst/semantic/: __init__.py
