[project]
name = "reliability-analyst"
version = "0.1.0"
description = "An MVP chat-with-data system for NASA C-MAPSS turbofan degradation analysis"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas",
  "duckdb",
  "pyarrow",
  "pydantic",
  "plotly",
  "matplotlib",
  "scikit-learn",
]

[dependency-groups]
dev = [
  "pytest>=8.4.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
package = true
